; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_user.c_user_get_homedir.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_user.c_user_get_homedir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"HOME\00", align 1
@APR_SUCCESS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*)* @user_get_homedir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @user_get_homedir(i32* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i64 @apr_env_get(i8** %5, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32* %6)
  %8 = load i64, i64* @APR_SUCCESS, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %14

10:                                               ; preds = %1
  %11 = load i8*, i8** %5, align 8
  %12 = load i32*, i32** %3, align 8
  %13 = call i8* @utf8_or_nothing(i8* %11, i32* %12)
  store i8* %13, i8** %2, align 8
  br label %30

14:                                               ; preds = %1
  %15 = load i32*, i32** %3, align 8
  %16 = call i8* @get_os_username(i32* %15)
  store i8* %16, i8** %4, align 8
  %17 = load i8*, i8** %4, align 8
  %18 = icmp ne i8* %17, null
  br i1 %18, label %19, label %29

19:                                               ; preds = %14
  %20 = load i8*, i8** %4, align 8
  %21 = load i32*, i32** %3, align 8
  %22 = call i64 @apr_uid_homepath_get(i8** %5, i8* %20, i32* %21)
  %23 = load i64, i64* @APR_SUCCESS, align 8
  %24 = icmp eq i64 %22, %23
  br i1 %24, label %25, label %29

25:                                               ; preds = %19
  %26 = load i8*, i8** %5, align 8
  %27 = load i32*, i32** %3, align 8
  %28 = call i8* @utf8_or_nothing(i8* %26, i32* %27)
  store i8* %28, i8** %2, align 8
  br label %30

29:                                               ; preds = %19, %14
  store i8* null, i8** %2, align 8
  br label %30

30:                                               ; preds = %29, %25, %10
  %31 = load i8*, i8** %2, align 8
  ret i8* %31
}

declare dso_local i64 @apr_env_get(i8**, i8*, i32*) #1

declare dso_local i8* @utf8_or_nothing(i8*, i32*) #1

declare dso_local i8* @get_os_username(i32*) #1

declare dso_local i64 @apr_uid_homepath_get(i8**, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
